[package]
name = "tls-tester"
description = "A tool for testing TLS 1.3 implementation compliance"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Alex Martens <alex@thinglab.org>"]
repository = "https://github.com/newAM/tls-tester"

[dependencies]
aes-gcm = "0.11.0-rc.1"
hkdf = "0.13.0-rc.2"
jiff = "0.2.15"
log = "0.4.27"
p256 = { version = "0.14.0-pre.11", features = [
  "ecdh",
  "pem",
  "ecdsa-core",
  "ecdsa",
] }
p384 = { version = "0.14.0-pre.11", features = [
  "ecdh",
  "pem",
  "ecdsa-core",
  "ecdsa",
] }
pem = "3.0.5"
rand = "0.9.2"
rsa = { version = "0.10.0-rc.9", features = ["sha2"] }
sha2 = "0.11.0-rc.2"
x25519-dalek = { version = "3.0.0-pre.1", features = [
  "reusable_secrets",
  "os_rng",
] }

[dev-dependencies]
stderrlog = "0.6"
