[package]
name = "tls-tester"
description = "A tool for testing TLS 1.3 implementation compliance"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Alex Martens <alex@thinglab.org>"]
repository = "https://github.com/newAM/tls-tester"

[dependencies]
aes-gcm = "=0.11.0-rc.3"
crypto-bigint = "0.7.3"
curve25519-dalek = "=5.0.0-pre.6"
hkdf = "0.13.0"
jiff = "0.2.23"
log = "0.4.29"
p256 = { version = "=0.14.0-rc.8", features = [
  "ecdh",
  "pem",
  "ecdsa-core",
  "ecdsa",
] }
p384 = { version = "=0.14.0-rc.9", features = [
  "ecdh",
  "pem",
  "ecdsa-core",
  "ecdsa",
] }
p521 = { version = "=0.14.0-rc.8", features = [
  "ecdh",
  "pem",
  "ecdsa-core",
  "ecdsa",
] }
pem = "3.0.6"
rand = "0.10.0"
rsa = { version = "=0.10.0-rc.17", features = ["sha2"] }
sha2 = "0.11.0"
zeroize = { version = "1.8.2", default-features = false }

[dev-dependencies]
stderrlog = "0.6"
rustls = { version = "0.23.37", default-features = false, features = [
  "std",
  "aws_lc_rs",
] }
